app/src/main/java/com/example/mobileskillupsession/dip/good/DebitCard.kt
package com.example.mobileskillupsession.dip.good

class DebitCard : ICardPayment{

    override fun makePayment(amount: Double) {
        TODO("Not yet implemented")
    }

}