app/src/main/java/com/example/mobileskillupsession/dip/bad/DebitCard.kt
package com.example.mobileskillupsession.dip.bad

class DebitCard {

    fun makePayment(amount: Double) {
        println("make payment $amount")
    }
}